#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([enotify], [1.0])
AC_CONFIG_SRCDIR([c_src/notify_drv.c])
#AM_INIT_AUTOMAKE
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
#AM_PROG_LIBTOOL
AC_HEADER_STDC
AC_ARG_PROGRAM

# Checks for libraries.
AC_CHECK_LIB([notify], [notify_notification_new])

# Checks for header files.
PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.2])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([memset])

# Check erlang
AC_ERLANG_PATH_ERL
AC_ERLANG_PATH_ERLC

AC_ERLANG_SUBST_ROOT_DIR
AC_ERLANG_SUBST_LIB_DIR
AC_ERLANG_SUBST_ERTS_VER

AC_ERLANG_SUBST_INSTALL_LIB_DIR

AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

AC_CONFIG_FILES([c_src/Makefile src/Makefile])
AC_OUTPUT
